updates to handle dependency change and added usage.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "dpd-paypal-ap",
-  "version": "0.0.7",
-  "author" : "Rob Rusher",
+  "version": "0.0.8",
+  "author": {
+    "name": "Rob Rusher"
+  },
   "main": "index.js",
   "dependencies": {
     "paypal-adaptive": "0.3.0"
   },
   "repository": {
-  	"type": "git",
-  	"url": "https://github.com/robrusher/dpd-paypal-ap.git"
+    "type": "git",
+    "url": "https://github.com/robrusher/dpd-paypal-ap.git"
   },
   "readmeFilename": "README.md",
-  "_id": "dpd-paypal-ap@0.0.7",
+  "_id": "dpd-paypal-ap@0.0.8",
   "description": "This custom resource type allows you to make adaptive payments through PayPal.",
-  "_from": "dpd-paypal-ap"
+  "_from": "dpd-paypal-ap@0.0.8",
+  "readme": "dpd-paypal-ap\r\n==========================\r\n\r\nDeployd module for using a Node.js sdk for Paypal Adaptive Payments and Paypal Adaptive Accounts API, without dependencies",
+  "bugs": {
+    "url": "https://github.com/robrusher/dpd-paypal-ap/issues"
+  },
+  "dist": {
+    "shasum": "866a9d830cdf1b80790209ea7907174780cccde5"
+  },
+  "_resolved": "https://registry.npmjs.org/dpd-paypal-ap/-/dpd-paypal-ap-0.0.8.tgz"
 }
